force-app/main/default/objects/Community_Survey__c/Community_Survey__c.object-meta.xml
<CustomObject>
    <description>Contains the survey data provided by non profit organziations after they have been approved for grants and donations.</description>
    <label>Community Survey Email Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Survey  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Survey Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>