force-app/main/default/objects/Community_Survey__c/fields/Community_Investment__c.field-meta.xml
<CustomField>
    <fullName>Community_Investment__c</fullName>
    <label>Community Investment</label>
    <referenceTo>Community_Giving__c</referenceTo>
    <relationshipLabel>Community Survey Emails</relationshipLabel>
    <relationshipName>Community_Survey_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>