force-app/main/default/objects/Community_Survey__c/fields/Email_body__c.field-meta.xml
<CustomField>
    <fullName>Email_body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>