force-app/main/default/objects/Community_Survey__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Email</label>
    <type>Email</type>
</CustomField>